force-app/main/default/objects/Demo_Mode__mdt/Demo_Mode__mdt.object-meta.xml
<CustomObject>
    <description>Controls demo autofill behaviour for the DocGen mapping and variables tabs</description>
    <label>Demo Mode</label>
    <pluralLabel>Demo Modes</pluralLabel>
</CustomObject>