force-app/main/default/objects/Demo_Mode__mdt/fields/Auto_Mapping_JSON__c.field-meta.xml
<CustomField>
    <fullName>Auto_Mapping_JSON__c</fullName>
    <label>Auto Mapping JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>