force-app/main/default/objects/Demo_Mode__mdt/fields/Scenario_Name__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Name__c</fullName>
    <label>Scenario Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>